log/build_2025-02-17_06-58-14/track/stderr.log
  File "/home/ros_dev/workspace/track/install/track/lib/python3.10/site-packages/track/bytetrack.py", line 207
    self.prev_time = time.time()s
                                ^
SyntaxError: invalid syntax

